# codex-plugin

./: .env.example  .gitignore  IMESSAGE_MEDIA_PLAN.md  README.md  install.sh  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
inkbox_codex/: __init__.py  cli.py  codex_client.py  codex_usage.py  config.py  daemon.py  doctor.py  escalation.py  gateway.py  mcp_stdio.py  media.py  prompts.py  realtime.py  sessions.py  setup_wizard.py  tools.py
tests/: test_codex_usage.py  test_config.py  test_daemon.py  test_escalation.py  test_gateway_call_ws.py  test_gateway_delivery_failures.py  test_gateway_health.py  test_gateway_inbound_media.py  test_media.py  test_prompts.py  test_realtime.py  test_sessions.py  test_setup_wizard.py  test_tools.py
