[project]
name = "codex-plugin"
version = "0.1.0"
description = "Inkbox bridge for Codex — talk to your coding agent over email, SMS, iMessage, and voice"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
  "inkbox>=0.4.9",
  "segno>=1.5",  # terminal QR codes for the iMessage connect step
]

[project.scripts]
inkbox-codex = "inkbox_codex.cli:main"

[tool.setuptools.packages.find]
include = ["inkbox_codex*"]

[tool.setuptools.package-data]
# Ship the bundled Codex avatar attached to agents during setup.
inkbox_codex = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
